# gatt_client

./: .gitignore  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  ble_gattc.c  ble_gattc.h  gattc_demo.c  gattc_demo_backup.c  gpio_button.c  gpio_button.h  led_indicator.c  led_indicator.h  main.c  ntp_time.c  ntp_time.h  wifi_manager.c  wifi_manager.h
tutorial/: Gatt_Client_Example_Walkthrough_CN.md
